# student-practice

cmake_study/: CMakeLists.txt  main.cpp
cmake_study/hello/: CMakeLists.txt  main.cpp
cmake_study/share_lib/: CMakeLists.txt  ExporteHello.cpp  ExporteHello.h
cmake_study/world_lib/: CMakeLists.txt  World.cpp  World.h
math-compute/: math-compute.sln
math-compute/math-compute/: math-compute.cpp  math-compute.vcxproj  math-compute.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
